--- a/README.Rmd
+++ b/README.Rmd
@@ -111,7 +111,13 @@ plot(repnum, type = "b")
 
 This model provides a more complex transmission and recovery pattern based 
 on agents' features. With it, we can reflect co-morbidities that could change
-the probability of infection and recovery. Here, we simulate a population of
+the probability of infection and recovery. Here, we simulate a population 
+including a dataset with two features: an intercept and a binary variable
+`Female`. The probability of infection and recovery are functions of the intercept and
+the `Female` variables. The following code simulates a population of 100,000 agents
+in a small-world network. Each agent is connected to eight other agents. One
+percent of the population has the virus, with an 80% chance of transmission.
+Infected individuals recover at a 0.3 rate:
 
 ```{r}
 # Simulating a population of 100,000 agents
