--- a/README.Rmd
+++ b/README.Rmd
@@ -13,14 +13,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-[![R-CMD-check](https://github.com/UofUEpi/epiworldR/actions/workflows/r.yml/badge.svg)](https://github.com/UofUEpi/epiworldR/actions/workflows/r.yml)
+[![R-CMD-check](https://github.com/UofUEpiBioepiworldR/actions/workflows/r.yml/badge.svg)](https://github.com/UofUEpiBioepiworldR/actions/workflows/r.yml)
 
 # epiworldR 
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-This R package is a wrapper of the C++ library [epiworld](https://github.com/UofUEpi/epiworld){target="_blank"}. It provides a general framework for modeling disease transmission using [agent-based models](https://en.wikipedia.org/w/index.php?title=Agent-based_model&oldid=1153634802){target="_blank"}. Some of the main features include:
+This R package is a wrapper of the C++ library [epiworld](https://github.com/UofUEpiBioepiworld){target="_blank"}. It provides a general framework for modeling disease transmission using [agent-based models](https://en.wikipedia.org/w/index.php?title=Agent-based_model&oldid=1153634802){target="_blank"}. Some of the main features include:
 
 
 - Fast simulation with an average of 30 million agents/day per second.
@@ -39,7 +39,7 @@ You can install the development version of epiworldR from [GitHub](https://githu
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("UofUEpi/epiworldR")
+devtools::install_github("UofUEpiBioepiworldR")
 ```
 
 # Examples
