--- a/vignettes/run-multiple.Rmd
+++ b/vignettes/run-multiple.Rmd
@@ -34,7 +34,7 @@ an initial prevalence of 0.0001 (0.01%), a contact rate of 2, probability of
 transmission 0.5, a total of 7 incubation days, and probability of recovery 
 $\frac{1}{3}$. 
 
-```{r sirconn setup}
+```{r sirconn-setup}
 library(epiworldR)
 model_seirconn <- ModelSEIRCONN(
   name              = "COVID-19",
@@ -56,7 +56,7 @@ Next, generate a saver for the purpose of extracting the "total_hist" and
 the simulation, number of simulations to run, and number of threads for 
 parallel computing. 
 
-```{r saver generation}
+```{r saver-generation}
 # Generating a saver
 saver <- make_saver("total_hist", "reproductive")
 # Running and printing
