--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -47,8 +47,8 @@ model_sir <- ModelSIRCONN(
   n                 = 100000, 
   prevalence        = 0.0001, 
   contact_rate      = 2,
-  prob_transmission = 0.5,
-  prob_recovery     = 1/3
+  transmission_rate = 0.5,
+  recovery_rate     = 1/3
   )
 ```
 
