--- a/vignettes/run-multiple.Rmd
+++ b/vignettes/run-multiple.Rmd
@@ -41,9 +41,9 @@ model_seirconn <- ModelSEIRCONN(
   n                 = 10000, 
   prevalence        = 0.0001, 
   contact_rate      = 2,
-  prob_transmission = 0.5,
+  transmission_rate = 0.5,
   incubation_days   = 7,
-  prob_recovery     = 1/3
+  recovery_rate     = 1/3
   )
 
 ```
