--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -22,15 +22,16 @@ affiliations:
 
 # Introduction
 
+Agent-based modeling (ABM) has emerged as a powerful computational approach to studying complex systems across various fields, including social sciences and epidemiology. By simulating the interactions and behaviors of individual entities, known as agents, ABM provides a unique lens through which researchers can analyze and understand the emergent properties and dynamics of these systems. The epiworldR package provides a flexible framework for ABM implementation and methods for prototyping disease outbreaks and transmission models using a C++ backend. It supports multiple epidemiological models, including the Susceptible-Infected-Susceptible (SIS), Susceptible-Infected-Removed (SIR), Susceptible-Exposed-Infected-Removed (SEIR), and others, involving arbitrary mitigation policies and multiple-disease models. Users can specify infectiousness/susceptibility rates as a function of agents' features, providing great complexity for the model dynamics.
+
 # Key Features
+
+Built on the robust foundation of C++, this package combines efficient computation with the flexibility of R, providing a seamless user experience. One of its standout features is its ability to handle multiple viruses, allowing researchers to simulate and analyze the dynamics of various infectious diseases simultaneously. Additionally, the package boasts a multi-tool capability, encompassing a diverse set of epidemiological models, enabling users to choose the most appropriate model for their specific research question or scenario. 'epiworldR' also offers global actions capability, allowing users to implement interventions and policies at a global scale, mimicking real-world scenarios and aiding in the assessment of their impact. Furthermore, the inclusion of popular epidemiological models within the package ensures that researchers have access to well-established and widely recognized frameworks, making it easier to compare and benchmark their results. With its extensive range of features, 'epiworldR' empowers researchers and practitioners in the field of epidemiology to conduct thorough analyses, make informed decisions, and contribute to the advancement of public health.
 
 # Existing Alternatives
 
-1.  [Covasim](https://github.com/InstituteforDiseaseModeling/covasim)
-2.  [OpenABM-Covid19](https://github.com/BDI-pathogens/OpenABM-Covid19)
-3.  [COVID19_AgentBasedSimulation](https://github.com/petroniocandido/COVID19_AgentBasedSimulation)
-4.  [covid19-agent-based-model](https://github.com/worldbank/covid19-agent-based-model)
+Several existing alternatives to 'epiworldR' provide researchers with different options for agent-based modeling in epidemiology. The first alternative, [Covasim](https://github.com/InstituteforDiseaseModeling/covasim), is a powerful and widely used framework that offers comprehensive modeling capabilities for infectious diseases. [OpenABM-Covid19](https://github.com/BDI-pathogens/OpenABM-Covid19) is another alternative that focuses specifically on simulating the spread of COVID-19, providing detailed models and tools for analysis. [COVID19_AgentBasedSimulation](https://github.com/petroniocandido/COVID19_AgentBasedSimulation) is a versatile package that allows for the simulation of COVID-19 transmission and intervention strategies. Lastly, [covid19-agent-based-model](https://github.com/worldbank/covid19-agent-based-model) developed by the World Bank offers a sophisticated modeling approach for studying the impact of COVID-19 on different socioeconomic factors. These alternatives provide researchers with a range of options, each with its own unique features and strengths, enabling the exploration and analysis of infectious disease dynamics through agent-based modeling.
 
 # Conclusion
 
-A
+The development of the 'epiworldR' package has ushered in a new era of agent-based modeling in the field of social science and epidemiology. By harnessing the power of C++ and the flexibility of R, this comprehensive package offers a multitude of features that enhance the modeling and analysis of complex infectious disease dynamics. The package's ability to handle multiple viruses, its diverse set of epidemiological models, and the inclusion of global actions capability empower researchers to explore a wide range of scenarios and make informed decisions regarding public health interventions. The 'epiworldR' package serves as a valuable resource for the social sciences and epidemiological communities, enabling the study of real-world phenomena, prediction of outcomes, and policy analysis. As the field of epidemiology continues to evolve, 'epiworldR' stands at the forefront, providing researchers and practitioners with a powerful tool to navigate the complexities of infectious diseases and contribute to the improvement of global health outcomes.
