--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,11 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Versions
+The virtual INSNA Sunbelt 2023 session can be found here: https://github.com/UofUEpiBio/epiworldR-workshop/tree/sunbelt2023-virtual
+
+The in-person INSNA Sunbelt 2023 session can be found here:
+https://github.com/UofUEpiBio/epiworldR-workshop/tree/sunbetl2023-inperson
 
 # epiworldR 
 
