--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -4,7 +4,7 @@
     year = {2023},
     note = {R package version 0.3},
     url = {https://CRAN.R-project.org/package=ABM},
-  }
+}
 
 @Manual{abmR,
     title = {abmR: Agent-Based Models in R},
@@ -12,7 +12,7 @@
     year = {2023},
     note = {R package version 1.0.9},
     url = {https://CRAN.R-project.org/package=abmR},
-  }
+}
   
 @article{gochanour2021abmr,
   title={abmR: An R package for agent-based model analysis of large-scale movements across taxa},
@@ -29,7 +29,7 @@
     year = {2016},
     note = {R package version 0.1.0},
     url = {https://CRAN.R-project.org/package=cystiSim},
-  }
+}
   
 @Manual{villager,
     title = {villager: A Framework for Designing and Running Agent Based Models},
@@ -37,4 +37,17 @@
     year = {2022},
     note = {R package version 1.1.1},
     url = {https://CRAN.R-project.org/package=villager},
-  }
+}
+  
+@Article{RNetLogo,
+    title = {{RNetLogo}: An {R} Package for Running and Exploring
+      Individual-Based Models Implemented in {NetLogo}},
+    author = {Jan C. Thiele and Winfried Kurth and Volker Grimm},
+    journal = {Methods in Ecology and Evolution},
+    year = {2012},
+    volume = {3},
+    number = {3},
+    pages = {480--483},
+    url =
+      {http://onlinelibrary.wiley.com/doi/10.1111/j.2041-210X.2011.00180.x/abstract},
+}
