Removing some unused functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -205,7 +205,7 @@ net <- get_transmissions(sir)
 
 # Plotting
 library(epiworldR)
-library(netplot)
+library(epiworldR)
 x <- igraph::graph_from_edgelist(
   as.matrix(net[,2:3]) + 1
   )
