--- a/README.Rmd
+++ b/README.Rmd
@@ -35,6 +35,16 @@ From the package's description:
 
 > A flexible framework for Agent-Based Models (ABM), the epiworldR package provides methods for prototyping disease outbreaks and transmission models using a C++ backend, making it very fast. It supports multiple epidemiological models, including the Susceptible-Infected-Susceptible (SIS), Susceptible-Infected-Removed (SIR), Susceptible-Exposed-Infected-Removed (SEIR), and others, involving arbitrary mitigation policies and multiple-disease models. Users can specify infectiousness/susceptibility rates as a function of agents’ features, providing great complexity for the model dynamics. Furthermore, epiworldR is ideal for simulation studies featuring large populations.
 
+Current available models:
+
+```{r print-models, echo=FALSE, results='asis'}
+models <- list.files(path="R/", pattern = "Model.*.R", full.names = FALSE) |>
+  gsub(pattern = "(Model.*)\\.R", replacement = "\\1") 
+
+sprintf("%i. `%s`\n", 1:length(models), models) |>
+  cat()
+```
+
 ## Installation
 
 You can install the development version of epiworldR from [GitHub](https://github.com/) with:
@@ -80,41 +90,41 @@ sir
 
 Visualizing the outputs
 
-```{r}
+```{r sir-figures}
 summary(sir)
 plot(sir)
+plot_incidence(sir)
 ```
 
 ## SEIR model with a fully connected graph
 
 The SEIR model is similar to the SIR model but includes an exposed state. Here, we simulate a population of 10,000 agents with a 0.01 prevalence, a 0.6 transmission rate, a 0.5 recovery rate, and 7 days-incubation period. The population is fully connected, meaning agents can transmit the disease to any other agent:
 
-```{r}
+```{r seir-conn}
 model_seirconn <- ModelSEIRCONN(
   name                = "COVID-19",
   prevalence          = 0.01, 
   n                   = 10000,
-  contact_rate        = 4, 
+  contact_rate        = 10, 
   incubation_days     = 7, 
-  transmission_rate   = 0.6,
-  recovery_rate       = 0.5
+  transmission_rate   = 0.1,
+  recovery_rate       = 1/7
 ) |> add_virus(virus("COVID-19", 0.01, 0.6, 0.5, 7), .5)
 
 set.seed(132)
 run(model_seirconn, ndays = 100)
-model_seirconn
+summary(model_seirconn)
 ```
 
 Computing some key statistics
 
-```{r}
+```{r seir-conn-figures}
 plot(model_seirconn)
 
 repnum <- get_reproductive_number(model_seirconn)
 
 head(plot(repnum))
 
-plot_incidence(model_seirconn)
 head(plot_generation_time(model_seirconn))
 ```
 
@@ -131,7 +141,7 @@ in a small-world network. Each agent is connected to eight other agents. One
 percent of the population has the virus, with an 80% chance of transmission.
 Infected individuals recover at a 0.3 rate:
 
-```{r}
+```{r logit-model}
 # Simulating a population of 100,000 agents
 set.seed(2223)
 n <- 100000
@@ -211,7 +221,7 @@ nplot(x, edge.curvature = 0, edge.color = "gray", skip.vertex=TRUE)
 
 `epiworldR` supports running multiple simulations using the `run_multiple` function. The following code simulates 50 SIR models with 1000 agents each. Each agent is connected to ten other agents. One percent of the population has the virus, with a 90% chance of transmission. Infected individuals recover at a 0.1 rate. The results are saved in a `data.frame`:
 
-```{r}
+```{r multiple-example}
 model_sir <- ModelSIRCONN(
   name = "COVID-19",
   prevalence = 0.01,
