--- a/vignettes/mixing.Rmd
+++ b/vignettes/mixing.Rmd
@@ -43,9 +43,9 @@ We will build this model using the `entity` class in epiworld. The following cod
 ```{r entity-matrix-setup} 
 library(epiworldR)
 
-e1 <- entity("Population 1", 3e3, FALSE)
-e2 <- entity("Population 2", 3e3, FALSE)
-e3 <- entity("Population 3", 3e3, FALSE)
+e1 <- entity("Population 1", 3e3, as_proportion = FALSE)
+e2 <- entity("Population 2", 3e3, as_proportion = FALSE)
+e3 <- entity("Population 3", 3e3, as_proportion = FALSE)
 
 # Row-stochastic matrix (rowsums 1)
 cmatrix <- c(
@@ -63,7 +63,7 @@ N <- 3e3
 flu_model <- ModelSEIRMixing(
   name              = "Flu",
   n                 = N,
-  prevalence        = 10 / N,
+  prevalence        = 1 / N,
   contact_rate      = 20,
   transmission_rate = 0.1,
   recovery_rate     = 1 / 7,
@@ -78,7 +78,7 @@ flu_model |>
   add_entity(e3)
 ```
 
-The function `add_entity_n` adds the corresponding entity and the number of agents that should be allocated to it. The default behavior randomly assigns agents to the entities at the beginning of the simulation. Agents cannot be assigned to more than one entity. The following code-chunk simulates the model for 100 days, summarizes the results, and plots the incidence curve:
+The function `add_entity` adds the corresponding entity. The default behavior randomly assigns agents to the entities at the beginning of the simulation. Agents may be assigned to more than one entity. The following code-chunk simulates the model for 100 days, summarizes the results, and plots the incidence curve:
 
 ```{r model-simulate}
 set.seed(331)
